Fixed font overflow

--- a/src/index.css
+++ b/src/index.css
@@ -724,7 +724,7 @@ html {
     text-align: left;
     border-radius: 20px;
     scroll-snap-align: start;
-    font-size: 2.2vh;
+    font-size: 2.15vh;
     position: relative;
   }
 
